--- a/src/main/resources/templates/page/signup.html
+++ b/src/main/resources/templates/page/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Sign up page</title>
     <!-- Favicon -->
-    <link rel="icon" href="/static/image/img.png" type="image/png">
+    <link rel="icon" href="/static/image/logo.svg" type="image/png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
@@ -17,10 +17,11 @@
 
         .navbar-brand {
             font-family: 'Constantia', cursive;
+            font-size: 25px;
         }
 
         .navbar-brand img {
-            margin-right: 10px;
+            margin-right: 3px;
         }
 
         body {
@@ -67,13 +68,13 @@
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid" style="max-width: 1000px;">
         <a class="navbar-brand" href="index.html"> <!-- 메인 페이지 경로로 변경해야 함. -->
-            <img src="/static/image/img.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+            <img src="/static/image/logo.svg" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
             Idea Rush
         </a>
     </div>
 </nav>
 
-<div class="container" style="margin-top: 50px; margin-bottom: 20px;">
+<div class="container" style="margin-top: 60px; margin-bottom: 20px;">
     <h1 class="text-center">Idea Rush</h1>
     <p class="text-center">Sign up to post your ideas and participate in the Idea Auction.</p>
     <form id="signup-form">
