--- a/src/main/resources/templates/page/ideaMain.html
+++ b/src/main/resources/templates/page/ideaMain.html
@@ -90,7 +90,7 @@
             width: 100%;
             height: 507px;
 
-            background: rgba(0, 0, 0, 0.6);
+            background: rgba(0, 0, 0, 0.60);
         }
 
         .binside {
@@ -150,7 +150,7 @@
             order: 0;
             align-self: stretch;
             flex-grow: 0;
-            background-color: white;
+            background: rgba(217, 217, 217, 0.50);
             width: 520px;
             height: 350px;
             float: right;
@@ -163,6 +163,7 @@
             width: 520px;
             height: 24px;
 
+            color: white;
             font-family: 'Roboto';
             font-style: normal;
             font-weight: 400;
@@ -175,19 +176,27 @@
         .button1 {
             float: left;
             margin: 30px;
-
-            /* Auto layout */
             display: flex;
+            width: 160px;
+            padding: 12px;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            padding: 12px;
-
-            width: 160px;
-            height: 48px;
-
-            border: 1px solid #FFFFFF;
             border-radius: 8px;
+            background: #000;
+            color: white;
+        }
+
+        .button2 {
+            float: left;
+            margin: 30px;
+            width: 160px;
+            padding: 12px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border-radius: 8px;
+            border: 1px solid #FFF;
         }
 
         /* section */
@@ -395,7 +404,7 @@
             <div class="content">
                 여러분들의 아이디어를 등록하고 아이디어를 사가세요!
             </div>
-            <button class="button1"  onclick="urlEvent('/')">Login</button>
+            <button class="button2" onclick="urlEvent('/')">Login</button>
             <button class="button1" onclick="urlEvent('/')">Sign Up</button>
         </div>
         <div class="bLayout3"></div>
@@ -403,7 +412,9 @@
     <div class="bar">
         <div class="search-bar">
             <input class="test" id="search" placeholder="Search"/>
-            <div class="categoryboxIn3"><button class="btn btn-outline-dark" onclick="searchPage()">Search</button></div>
+            <div class="categoryboxIn3">
+                <button class="btn btn-outline-dark" onclick="searchPage()">Search</button>
+            </div>
         </div>
         <div class="categorybar">
             <div class="categoryboxIn">
@@ -411,18 +422,22 @@
                 </button>
             </div>
             <div class="categoryboxIn">
-                <button class="btn btn-outline-dark" value="ART_AND_DESIGN" onclick="category(null, this.value)">ART AND DESIGN
+                <button class="btn btn-outline-dark" value="ART_AND_DESIGN" onclick="category(null, this.value)">ART AND
+                    DESIGN
                 </button>
             </div>
             <div class="categoryboxIn">
-                <button class="btn btn-outline-dark" value="BUSINESS" onclick="category(null, this.value)">BUSINESS</button>
-            </div>
-            <div class="categoryboxIn">
-                <button class="btn btn-outline-dark" value="SOCIAL_ISSUES" onclick="category(null, this.value)">SOCIAL ISSUES
+                <button class="btn btn-outline-dark" value="BUSINESS" onclick="category(null, this.value)">BUSINESS
                 </button>
             </div>
             <div class="categoryboxIn">
-                <button class="btn btn-outline-dark" value="LIFESTYLE" onclick="category(null, this.value)">LIFESTYLE</button>
+                <button class="btn btn-outline-dark" value="SOCIAL_ISSUES" onclick="category(null, this.value)">SOCIAL
+                    ISSUES
+                </button>
+            </div>
+            <div class="categoryboxIn">
+                <button class="btn btn-outline-dark" value="LIFESTYLE" onclick="category(null, this.value)">LIFESTYLE
+                </button>
             </div>
         </div>
         <div class="categoryboxIn">
