--- a/src/main/resources/templates/page/ideaMain.html
+++ b/src/main/resources/templates/page/ideaMain.html
@@ -127,7 +127,7 @@
 
         /* title */
         .bTitle {
-            margin: 30px;
+            margin: 30px 10px;
             width: 520px;
             height: 48px;
 
@@ -159,7 +159,7 @@
 
         /* description */
         .content {
-            margin: 30px;
+            margin: 30px 10px;
             width: 520px;
             height: 24px;
 
@@ -175,7 +175,7 @@
         /* seconday */
         .button1 {
             float: left;
-            margin: 30px;
+            margin: 10px;
             display: flex;
             width: 160px;
             padding: 12px;
@@ -189,7 +189,7 @@
 
         .button2 {
             float: left;
-            margin: 30px;
+            margin: 10px 0px 30px 40px;
             width: 160px;
             padding: 12px;
             flex-direction: column;
