--- a/src/main/resources/templates/page/login.html
+++ b/src/main/resources/templates/page/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Log in page</title>
     <!-- Favicon -->
-    <link rel="icon" href="/static/image/logo.svg" type="image/png">
+    <link rel="icon" href="/image/logo.svg" type="image/png">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
@@ -63,8 +64,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid" style="max-width: 1000px;">
-        <a class="navbar-brand" href="index.html"> <!-- 메인 페이지 경로로 변경해야 함. -->
-            <img src="/static/image/logo.svg" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
+        <a class="navbar-brand" href="/view/pageMain"> <!-- 메인 페이지 경로로 변경해야 함. -->
+            <img src="/image/logo.svg" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
             Idea Rush
         </a>
     </div>
@@ -88,7 +89,7 @@
 <div class="container" style="margin-top: 20px;">
     <div class="row justify-content-center">
         <div class="col-12 text-center">
-            Don't have an account? <a href="signup.html">Sign up</a>
+            Don't have an account? <a href="/view/pageSignup">Sign up</a>
         </div>
     </div>
 </div>
@@ -97,7 +98,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-    document.addEventListener('DOMContentLoaded', function () {
+    $(document).ready(function () {
         const form = document.getElementById('login-form');
 
         form.addEventListener('submit', function (event) {
@@ -106,29 +107,29 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            fetch('http://localhost:8080/api/auth/login', { // 실제 백엔드 엔드포인트로 변경해야 함.
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    userAccountId: username,
-                    password: password
-                })
-            })
-                .then(response => {
-                    if (response.ok) {
-                        alert('Successfully logged in!');
-                        window.location.href = "dashboard.html"; // 메인 페이지로 변경해야 함.
-                    } else {
-                        document.getElementById('password').value = '';
-                        alert('Invalid ID or password.');
+
+            const requestData = {
+                userAccountId: username,
+                password: password
+            };
+
+            const sendUrl = "/api/auth/login"
+
+            $.ajax({
+                type: "POST",
+                url: sendUrl, // 서버 스크립트 파일의 경로를 지정해야 합니다.
+                data: JSON.stringify(requestData),
+                contentType: "application/json",
+                success: function (data,textStatus, xhr) {
+                    const authorizationHeader = xhr.getResponseHeader("Authorization");
+                    if (authorizationHeader) {
+                        alert("Login Success!")
+                        localStorage.setItem("authToken", authorizationHeader.split(" ")[1]);
+                        window.location.href="/view/pageMain";
                     }
-                })
-                .catch(error => {
-                    document.getElementById('password').value = '';
-                    alert('An error occurred while logging in : ' + error.message);
-                });
+                },
+            });
+
         });
     });
 </script>
