--- a/src/main/resources/templates/page/signup.html
+++ b/src/main/resources/templates/page/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Sign up page</title>
     <!-- Favicon -->
-    <link rel="icon" href="/static/image/logo.svg" type="image/png">
+    <link rel="icon" href="/image/logo.svg" type="image/png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
@@ -67,8 +67,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid" style="max-width: 1000px;">
-        <a class="navbar-brand" href="index.html"> <!-- 메인 페이지 경로로 변경해야 함. -->
-            <img src="/static/image/logo.svg" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
+        <a class="navbar-brand" href="/view/pageMain"> <!-- 메인 페이지 경로로 변경해야 함. -->
+            <img src="/image/logo.svg" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
             Idea Rush
         </a>
     </div>
@@ -110,7 +110,7 @@
 <div class="container" style="margin-top: 20px;">
     <div class="row justify-content-center">
         <div class="col-12 text-center">
-            Do you have an account? <a href="login.html">Log in</a>
+            Do you have an account? <a href="/view/pageLogin">Log in</a>
         </div>
     </div>
 </div>
@@ -150,7 +150,7 @@
                 .then(response => {
                     if (response.ok) {
                         alert('Membership registration successful!');
-                        window.location.href = "login.html";
+                        window.location.href = "/view/pageLogin";
                     } else {
                         alert('Membership registration failed due to a duplicate ID or nickname.');
                     }
